// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ServerlessAwsLambdaServiceSpec tests When stepViewType is Edit render properly when stepViewType is Edit 1`] = `
<div>
  <div
    class="serviceDefinition"
  >
    <div
      class="bp3-card bp3-elevation-0 Card--card sectionCard"
      id="pipelineSteps.deploy.serviceSpecifications.deploymentTypes.manifests"
    >
      <div
        class="tabSubHeading ng-tooltip-native"
        data-tooltip-id="serverlessDeploymentTypeManifests"
      >
        pipelineSteps.deploy.serviceSpecifications.deploymentTypes.manifests
      </div>
      <div
        class="Layout--vertical StyledProps--main"
      >
        <div
          class="Layout--vertical StyledProps--main"
          style="width: 100%;"
        >
          <div
            class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
          >
            <div
              class="Layout--vertical StyledProps--main"
            >
              <section />
            </div>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-medium StyledProps--main StyledProps--flex StyledProps--flex-alignItems-flex-start"
          >
            <button
              class="bp3-button Button--button StyledProps--font StyledProps--main addManifest Button--with-current-color Button--variation Button--variation-link Button--size Button--small"
              data-test-id="addManifest"
              id="add-manifest"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                pipelineSteps.serviceTab.manifestList.addManifest
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="bp3-card bp3-elevation-0 Card--card sectionCard"
      id="pipelineSteps.deploy.serviceSpecifications.deploymentTypes.artifacts"
    >
      <div
        class="tabSubHeading ng-tooltip-native"
        data-tooltip-id="serverlessDeploymentTypeArtifacts"
      >
        pipelineSteps.deploy.serviceSpecifications.deploymentTypes.artifacts
      </div>
      <div
        class="Layout--vertical StyledProps--main"
        style="width: 100%;"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
        >
          <div
            class="Layout--vertical StyledProps--main"
          >
            <section />
          </div>
        </div>
        <div
          class="Layout--vertical Layout--layout-spacing-medium StyledProps--main StyledProps--flex StyledProps--flex-alignItems-flex-start"
        >
          <button
            class="bp3-button Button--button StyledProps--font StyledProps--main addArtifact Button--with-current-color Button--variation Button--variation-link Button--size Button--small"
            id="add-artifact"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              pipelineSteps.serviceTab.artifactList.addPrimary
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="accordionTitle"
    >
      <div
        class="tabHeading"
        id="advanced"
      >
        advancedTitle
      </div>
      <div
        class="bp3-card bp3-elevation-0 Card--card sectionCard"
        id="common.variables"
      >
        <div
          class="tabSubHeading"
        >
          common.variables
        </div>
        <div
          class="Layout--vertical StyledProps--main"
          style="border-radius: 5px;"
        >
          <section />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ServerlessAwsLambdaServiceSpec tests When stepViewType is InputSet render properly when stepViewType is InputSet 1`] = `
<div>
  <div
    class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
  />
</div>
`;

exports[`ServerlessAwsLambdaServiceSpec tests When stepViewType is InputSet when artifactPath is runtime input 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
    >
      <div
        class="nopadLeft accordionSummary"
        id="Stage.undefined.Service.Artifacts"
      >
        <div
          class="subheading"
        >
          pipelineSteps.deploy.serviceSpecifications.deploymentTypes.artifacts
           
        </div>
        <div
          class="nestedAccordions artifactsAccordion"
        >
          <p
            class="StyledProps--font StyledProps--main inputheader"
          >
            primaryArtifactText
          </p>
          <div
            class="Layout--vertical StyledProps--main inputWidth"
          >
            <div
              class="connectorLabel"
            >
              <div
                class="StyledProps--font StyledProps--main"
                style="margin-bottom: 5px;"
              >
                <span
                  class="Tooltip--acenter bp3-label"
                  data-tooltip-id="stepTestUtilForm_.artifacts.primary.spec.connectorRef"
                >
                  pipelineSteps.deploy.inputSet.artifactServer
                </span>
              </div>
              <div
                style="display: flex; align-items: center;"
              >
                <div
                  class="bp3-form-group connectorMargin"
                  style="margin-bottom: 0px;"
                >
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                      style="width: 391px;"
                    >
                      <button
                        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow Button--withRightIcon"
                        data-testid="cr-field-.artifacts.primary.spec.connectorRef"
                        style="width: 391px;"
                        type="button"
                      >
                        <span
                          class="bp3-button-text"
                        >
                          <span
                            class="placeholder"
                          />
                        </span>
                        <span
                          class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                          icon="chevron-down"
                        >
                          <svg
                            data-icon="chevron-down"
                            height="14"
                            viewBox="0 0 16 16"
                            width="14"
                          >
                            <desc>
                              chevron-down
                            </desc>
                            <path
                              d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                      <span
                        class="bp3-popover-wrapper MultiTypeInput--wrapper"
                      >
                        <span
                          class="bp3-popover-target"
                        >
                          <button
                            class="MultiTypeInput--btn MultiTypeInput--FIXED"
                          >
                            <span
                              class="bp3-icon StyledProps--main"
                              data-icon="fixed-input"
                            >
                              <svg
                                height="12"
                                viewBox="0 0 9 9"
                                width="12"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                  fill="currentColor"
                                />
                              </svg>
                            </span>
                          </button>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="bp3-form-group"
            >
              <label
                class="bp3-label"
                for=".artifacts.primary.spec.repository"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="stepTestUtilForm_.artifacts.primary.spec.repository"
                >
                  repository
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                >
                  <div
                    class="bp3-input-group MultiTypeInput--input"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name=".artifacts.primary.spec.repository"
                      type="text"
                      value=""
                    />
                  </div>
                  <span
                    class="bp3-popover-wrapper MultiTypeInput--wrapper"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <button
                        class="MultiTypeInput--btn MultiTypeInput--FIXED"
                      >
                        <span
                          class="bp3-icon StyledProps--main"
                          data-icon="fixed-input"
                        >
                          <svg
                            height="12"
                            viewBox="0 0 9 9"
                            width="12"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                              fill="currentColor"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </span>
                </div>
              </div>
            </div>
            <div
              class="bp3-form-group"
            >
              <label
                class="bp3-label"
                for=".artifacts.primary.spec.artifactPath"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="stepTestUtilForm_.artifacts.primary.spec.artifactPath"
                >
                  pipeline.artifactPathLabel
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                >
                  <div
                    class="bp3-input-group MultiTypeInput--input"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name=".artifacts.primary.spec.artifactPath"
                      type="text"
                      value=""
                    />
                  </div>
                  <span
                    class="bp3-popover-wrapper MultiTypeInput--wrapper"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <button
                        class="MultiTypeInput--btn MultiTypeInput--FIXED"
                      >
                        <span
                          class="bp3-icon StyledProps--main"
                          data-icon="fixed-input"
                        >
                          <svg
                            height="12"
                            viewBox="0 0 9 9"
                            width="12"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                              fill="currentColor"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="nopadLeft accordionSummary"
        id="Stage.undefined.Service.Artifacts.Sidecars"
      />
    </div>
    <p
      class="StyledProps--font StyledProps--main"
    >
      Errors
    </p>
    <pre>
      {}
    </pre>
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        Submit
      </span>
    </button>
  </div>
</div>
`;

exports[`ServerlessAwsLambdaServiceSpec tests When stepViewType is InputSet when artifactPathFilter is runtime input 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
    >
      <div
        class="nopadLeft accordionSummary"
        id="Stage.undefined.Service.Artifacts"
      >
        <div
          class="subheading"
        >
          pipelineSteps.deploy.serviceSpecifications.deploymentTypes.artifacts
           
        </div>
        <div
          class="nestedAccordions artifactsAccordion"
        >
          <p
            class="StyledProps--font StyledProps--main inputheader"
          >
            primaryArtifactText
          </p>
          <div
            class="Layout--vertical StyledProps--main inputWidth"
          >
            <div
              class="connectorLabel"
            >
              <div
                class="StyledProps--font StyledProps--main"
                style="margin-bottom: 5px;"
              >
                <span
                  class="Tooltip--acenter bp3-label"
                  data-tooltip-id="stepTestUtilForm_.artifacts.primary.spec.connectorRef"
                >
                  pipelineSteps.deploy.inputSet.artifactServer
                </span>
              </div>
              <div
                style="display: flex; align-items: center;"
              >
                <div
                  class="bp3-form-group connectorMargin"
                  style="margin-bottom: 0px;"
                >
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                      style="width: 391px;"
                    >
                      <button
                        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow Button--withRightIcon"
                        data-testid="cr-field-.artifacts.primary.spec.connectorRef"
                        style="width: 391px;"
                        type="button"
                      >
                        <span
                          class="bp3-button-text"
                        >
                          <span
                            class="placeholder"
                          />
                        </span>
                        <span
                          class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                          icon="chevron-down"
                        >
                          <svg
                            data-icon="chevron-down"
                            height="14"
                            viewBox="0 0 16 16"
                            width="14"
                          >
                            <desc>
                              chevron-down
                            </desc>
                            <path
                              d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                      <span
                        class="bp3-popover-wrapper MultiTypeInput--wrapper"
                      >
                        <span
                          class="bp3-popover-target"
                        >
                          <button
                            class="MultiTypeInput--btn MultiTypeInput--FIXED"
                          >
                            <span
                              class="bp3-icon StyledProps--main"
                              data-icon="fixed-input"
                            >
                              <svg
                                height="12"
                                viewBox="0 0 9 9"
                                width="12"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                  fill="currentColor"
                                />
                              </svg>
                            </span>
                          </button>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="bp3-form-group"
            >
              <label
                class="bp3-label"
                for=".artifacts.primary.spec.repository"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="stepTestUtilForm_.artifacts.primary.spec.repository"
                >
                  repository
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                >
                  <div
                    class="bp3-input-group MultiTypeInput--input"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name=".artifacts.primary.spec.repository"
                      type="text"
                      value=""
                    />
                  </div>
                  <span
                    class="bp3-popover-wrapper MultiTypeInput--wrapper"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <button
                        class="MultiTypeInput--btn MultiTypeInput--FIXED"
                      >
                        <span
                          class="bp3-icon StyledProps--main"
                          data-icon="fixed-input"
                        >
                          <svg
                            height="12"
                            viewBox="0 0 9 9"
                            width="12"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                              fill="currentColor"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="nopadLeft accordionSummary"
        id="Stage.undefined.Service.Artifacts.Sidecars"
      />
    </div>
    <p
      class="StyledProps--font StyledProps--main"
    >
      Errors
    </p>
    <pre>
      {}
    </pre>
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        Submit
      </span>
    </button>
  </div>
</div>
`;

exports[`ServerlessAwsLambdaServiceSpec tests When stepViewType is InputVariable render properly when stepViewType is InputVariable 1`] = `
<div>
  <div
    class="Accordion--panel"
    data-open="false"
    data-testid="undefined.Variables-panel"
    id="undefined.Variables-panel"
  >
    <div
      class="Accordion--summary variableBorderBottom accordianSummaryL2"
      data-testid="undefined.Variables-summary"
    >
      <div
        class=""
      >
        <div
          class="accordionSummary"
        >
          <span
            class="bp3-icon StyledProps--main iconCollapsed"
            data-icon="accordion-collapsed"
          >
            <svg
              fill="none"
              height="12"
              viewBox="0 0 12 12"
              width="12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                fill="#F3F3FA"
                height="11.5"
                rx="0.75"
                stroke="#9293AB"
                stroke-width="0.5"
                width="11.5"
                x="0.25"
                y="0.25"
              />
              <path
                d="M10 6.571H6.571V10H5.43V6.571H2V5.43h3.429V2H6.57v3.429H10V6.57z"
                fill="#0A3364"
                opacity="0.7"
              />
            </svg>
          </span>
          <span
            class="bp3-icon StyledProps--main iconExpanded"
            data-icon="accordion-expanded"
          >
            <svg
              fill="none"
              height="12"
              viewBox="0 0 12 11"
              width="12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                fill="#F3F3FA"
                height="10.5"
                rx="0.75"
                stroke="#9293AB"
                stroke-width="0.5"
                width="11.5"
                x="0.25"
                y="0.25"
              />
              <path
                d="M10 6.143H2V5h8v1.143z"
                fill="#0A3364"
                opacity="0.7"
              />
            </svg>
          </span>
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-h6"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-variation-small-semi StyledProps--color StyledProps--color-black"
            >
              common.variables
            </p>
          </p>
        </div>
      </div>
      <div
        class="Accordion--chevron"
      />
    </div>
    <div
      class="bp3-collapse Accordion--collapse"
    >
      <div
        aria-hidden="false"
        class="bp3-collapse-body"
        style="transform: translateY(-undefinedpx);"
      />
    </div>
  </div>
</div>
`;
